--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文字序号转换器</title>
+    <title>月报排版器</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,8 +73,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>文字序号转换器</h1>
-        
+        <h1>月报排版器</h1>
         <div class="input-section">
             <label for="inputText">请输入多行文字：</label>
             <textarea id="inputText" placeholder="在此输入多行文字，每行一条内容..."></textarea>
